# client_manager

./: .gitignore  Dockerfile  README.md  chat_client.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
k8s/: deployment.yaml  gateway-routes.yaml  ingress.yaml  jwt-plugin.yaml  networking.yaml  service.yaml
src/: main.py
src/backend/: client.py  database.py
src/backend/agents/budget/: node.py  prompt.py  tools.py
src/backend/api/: dependencies.py  router.py
src/backend/api/v1/: auth.py  chat.py  file.py  webchat.py
src/backend/core/: cache.py  client.py  config.py  dependencies.py  lifecycle.py  security.py
src/backend/models/: account.py  client.py  llm.py  user.py
src/backend/repository/: chat_repository.py  file_repository.py  project_repository.py
src/backend/schemas/: chat.py  file.py  qdrant.py
src/backend/services/: auth_service.py  chat_service.py  database_service.py  embeddings_provider.py  file_service.py  llm_provider.py  project_service.py  redis_service.py
src/backend/shared/: builder.py  state.py
src/data/: llm_response_example.json
src/llm_models/: download_models.py
src/static/: index.html
