[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "azure-cosmos>=4.16.1",
    "fastapi[standard]>=0.136.3",
    "google-genai>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-dateutil>=2.9.0.post0",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.50",
]
