[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "azure-cosmos>=4.16.1",
    "fastapi[standard]>=0.136.3",
    "fastembed>=0.8.0",
    "google-genai>=2.9.0",
    "langchain-community>=0.4.2",
    "langchain-text-splitters>=1.1.2",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.3.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "pypdf>=6.14.2",
    "pytesseract>=0.3.13",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.50",
    "upstash-redis>=1.7.0",
]
